--- a/templates/entrada.html
+++ b/templates/entrada.html
@@ -13,7 +13,7 @@
                 <img src="{{ url_for('static', filename='img/tele.jfif') }}" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">{% print(pro[2]) %}</h5>
-                  <a href="#" class="btn btn-primary">Comprar online</a>
+                  <a href="#" class="btn btn-primary">Agregar a favoritos</a>
                 </div>
               </div>
           </div>
