--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/principal">Buscar producto</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/usuarios">Administrar usuarios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/agregar">Agregar productos</a>
+          </li>
         </ul>
       </div>
     </div>
